# AiChemistTransmutations

./: .cursorignore  .env.example  .env.local.template  .env.production.template  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_SCRIPT_TEMPLATES.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_READY.md  LAUNCH_NOW.txt  LAUNCH_STATUS.txt  LICENSE  LICENSE-NOTICE.txt  PRODUCTION_IMPLEMENTATION_SUMMARY.md  README.md  TESTING_MAIN_BRANCH.md  TEST_RESULTS_SUMMARY.md  beautify the docs  installer.iss  package-lock.json  package.json  pdf2pdfed  pyproject.toml  ruff.toml  run-gui.bat  start_app.bat  tasks.json.template  test_license_activation.py  transmutation_codex.spec  version.py
.claude/: auth.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: python-ci.yml  release.yml
config/: default_config.yaml  electron_config.json  logging_config.yaml  production_config.yaml
docs/: ASSET_FIX_COMPLETE.md  AUTO_PATH_CONFIGURATION.md  BUILD_FAILURE_ACTION_PLAN.md  BUILD_FROM_POWERSHELL.ps1  BUILD_GUIDE.md  BUILD_INSTALLER.ps1  BUILD_ISSUES.md  BUILD_SUCCESS_REPORT.md  BUILD_SUCCESS_SUMMARY.md  BUNDLING_TESSERACT.md  COMPLETE_BUILD_GUIDE.md  COMPLETE_BUILD_SUCCESS.md  DOCUMENTATION_READY.md  DOCX_TO_PDF_IMPROVEMENTS.md  DOCX_TO_PDF_V1.1_ENHANCEMENTS.md  DOWNLOADER_BUILD_GUIDE.md  EULA.md  FAQ.md  FIRST_BUILD_GUIDE.md  FIRST_BUILD_SUCCESS.md  FIX_DOUBLE_ELECTRON_DEV_PROD.md  FIX_DOUBLE_ELECTRON_LAUNCH.md  GHOSTSCRIPT_BUNDLING.md  GHOSTSCRIPT_BUNDLING_INSTALLER.md  GUI_QUALITY_UPDATE.md  GUMROAD_COMPLETE_SETUP.md  GUMROAD_INTEGRATION_SUCCESS.md  GUMROAD_READY_TO_LAUNCH.md  GUMROAD_SETUP_GUIDE.md  GUMROAD_SIMPLIFIED_SETUP.md  GUMROAD_UPDATED_APPROACH.md  HOW_TO_BUILD.md  ICON_FIX_COMPLETE.md  ICON_FIX_INSTRUCTIONS.md  ICON_SVG_FIX_COMPLETE.md  IMPLEMENTATION_SUMMARY_PATH.md  INSTALLATION.md  INSTALLER_FEATURES.md  INSTALLER_QUICK_REFERENCE.md  INSTALLER_UPLOAD_GUIDE.md  (+49 more)
docs/archive/: AUTO_ACTIVATION_SETUP.md  DEPLOYMENT_CHECKLIST.md  GUMROAD_PRODUCT_DESCRIPTION.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_SUMMARY.md  SUPABASE_INTEGRATION.md  TEST_RESULTS_SUMMARY.md
docs/completed/: CONTINUATION_FROM_AUTH.md  IMPLEMENTATION_SUMMARY_PATH.md  LICENSING_IMPLEMENTATION_COMPLETE.md  LICENSING_IMPLEMENTATION_SUMMARY.md  PRODUCTION_SETUP.md  SUPABASE_SETUP_COMPLETE.md
docs/guides/: AUTO_PATH_CONFIGURATION.md  GHOSTSCRIPT_BUNDLING.md  MIKTEX_BUNDLING.md
docs/plans/: pdf_editor_development_plan.rst
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  ocr_functionality.rst  usage.rst
docs/troubleshooting/: AUTO_RETRY_FORCE_OCR.md  DOCX2PDF_ENGINE_FIX.md  TROUBLESHOOTING_PATH.md
generated_keys/: keys_basic_20251024_073708.csv  keys_basic_20251024_073708.json  keys_enterprise_20251024_073755.csv  keys_enterprise_20251024_073755.json  keys_pro_20251024_073739.csv  keys_pro_20251024_073739.json
gui/: .env.template  INSTALLER_IMPLEMENTATION_SUMMARY.md  README_INSTALLER_CHANGES.md  nodemon.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
gui/assets/: ICONS_SUMMARY.md  QUICK_START.md
gui/scripts/: Test-Installer.ps1  copy-assets.js  dev-with-cleanup.ps1  electron-with-cleanup.js  fix-icon.js
releases/: README.md
releases/1.0.3/: AiChemist Transmutation Codex Setup 1.0.3.exe.blockmap  builder-debug.yml  builder-effective-config.yaml  latest.yml
releases/1.0.4/: builder-debug.yml  latest.yml
releases/1.0.5/: builder-debug.yml  latest.yml
scripts/: CLEANUP_SUMMARY.md  ORGANIZATION_COMPLETE.md  PRODUCTION_READY.md  README.md  auto_activate_dev_license.py  build_installer.ps1  build_installer.sh  check_premium_dependencies.py  fix_miktex.ps1  generate_dev_license.py  generate_rsa_keys.py  install_miktex.ps1  prepare_dependencies.py  quick-txt-pdf.py  runtime_hook_paths.py  start_app.py  supabase_setup.sql
scripts/dev/: add_licensing_to_converters.py  show_dev_license.py  test_supabase_integration.py
scripts/gumroad/: .env.server.template  DEPLOYMENT_CHECKLIST.md  Procfile  README.md  gumroad_config.yaml  railway.json  requirements-webhook.txt  webhook_server.py
scripts/licensing/: assign_key_to_customer.py  generate_dev_license.py  generate_gumroad_keys.py  generate_license.py  get_unused_keys_count.py  insert_license_keys.py  insert_test_license.py  quick_gumroad_setup.py  quick_license_gen.py  test_gumroad_integration.py
scripts/setup/: add_ghostscript_to_path.ps1  add_miktex_to_path.ps1  install_ghostscript.ps1  install_miktex.ps1  install_pandoc.ps1  setup_external_dependencies.ps1  setup_supabase_schema.py  supabase_setup.sql
src/aichemist_transmutation_codex/: __init__.py  batch_processor.py  cli.py  electron_bridge.py
tests/: README.md  TEST_CLEANUP_SUMMARY.md  TEST_FINAL_STATUS.md  TEST_FINAL_STATUS_SUMMARY.md  TEST_FIXES_APPLIED.md  TEST_FIXES_SESSION_3.md  TEST_SUITE_OVERVIEW.md  __init__.py  check_pdf_engines.py  conftest.py  pytest.ini  quick_test_docx2md.py  test_bundled_tesseract.py  test_docx2pdf_engine_detection.py  test_licensing_system.py
tests/helpers/: __init__.py  check_deps.py  check_env.py
tests/integration/: __init__.py  test_electron_bridge_integration.py  test_end_to_end.py  test_end_to_end_conversion.py
tests/smoke/: __init__.py  quick_test.py
tests/system/: __init__.py
tests/test_files/: README.md  batch_test_1.epub  batch_test_1.md  batch_test_2.docx  batch_test_2.epub  batch_test_4.md  batch_test_5.txt  create_epub_test.py  create_excel_test.py  electron_test.csv  electron_test.docx  electron_test.editable  electron_test.epub  electron_test.md  electron_test.pptx  electron_test.txt  electron_test.xlsx  electron_test_bridge.docx  electron_test_bridge.epub  electron_test_bridge.md  electron_test_fixed.compress  electron_test_fixed.encrypt  electron_test_fixed.watermark  test.txt  test_csv_complex.csv  test_csv_sample.csv  test_epub_complex.epub  test_epub_complex.md  test_epub_multilang.docx  test_epub_multilang.epub  test_epub_sample.epub  test_epub_simple.epub  test_epub_technical.epub  (+13 more)
(+255 files in other folders)
