[build-system]
build-backend = "uv_build"
requires      = [ "uv-build>=0.6.0,<0.8" ]

[project]
# Project name changed to align with the primary package directory src/aichemist_transmutation_codex
name = "aichemist_transmutation_codex"
# Version from aichemist-transmutation-codex, consider incrementing after merge
version = "0.1.0"
# Description updated to cover both functionalities
description     = "A versatile document conversion and file management toolkit, part of the AiChemist suite."
license         = { text = "MIT" }
readme          = "README.md"
requires-python = ">=3.13.0"

# Combined and de-duplicated dependencies from both projects
# Version conflicts resolved by taking the more recent or specific constraint
dependencies = [
    # --- From aichemist-transmutation-codex ---
    "markdown>=3.4.3",
    "markdown-pdf>=0.1.1",      # Note: Consider alternatives if facing issues, this lib can be tricky
    "click>=8.1.3",             # Typer (from the_aichemist_codex) also uses Click
    "pymupdf4llm>=0.0.17",
    "opencv-python>=4.11.0.86",
    "numpy>=2.2.4",             # Higher version from aichemist-transmutation-codex (was >=1.24.0 in the_aichemist_codex)
    "pytesseract>=0.3.13",      # Higher version from aichemist-transmutation-codex (was >=0.3.10)
    "PyYAML>=6.0.1",            # Higher version from the_aichemist_codex (was >=6.0)
    "pymupdf>=1.20.0",
    "pdfminer.six>=20201018",
    "pdfkit>=1.0.0",
    "python-docx>=0.8.11",      # Present in both
    "mammoth>=1.4.18",
    # Rich is in both, Typer (from the_aichemist_codex) brings it too. Taking specific version from the_aichemist_codex
    "rich>=13.6.0",
    # Typer from the_aichemist_codex, includes click
    "typer>=0.9.0",
    # "uv>=0.6.12", # uv is a build tool, not a runtime dep usually, manage via [build-system] or dev
    # "node", # 'node' is not a standard PyPI package. If this is for Node.js, it's managed externally.
    "nanoid>=2.0.0",          # Assuming this is python-nanoid or similar
    "ocrmypdf",
    "pypandoc>=1.12",
    "ebooklib>=0.18",
    "markdownify>=0.11",
    "html2text>=2020.1.16",
    "docx2pdf>=0.1.8",
    "pdf2docx>=0.5.6",
    "reportlab>=4.0.0",
    "odfpy>=0.9.7",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "nbconvert>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",

    # --- From the_aichemist_codex (unique or version reconciled) ---
    "Kreuzberg>=0.1.0",
    "loguru>=0.7.2",
    "platformdirs>=4.3.6",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=2.15.1",
    "tomli>=2.0.1",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "cryptography>=41.0.7",
    "defusedxml>=0.7.1",
    "ezdxf>=1.0.0",
    "py7zr>=0.22.0",
    "pypdf>=3.17.1",
    "python-magic>=0.4.27",                              # Requires libmagic
    "rarfile>=4.0",
    "faiss-cpu>=1.7.4",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.2",
    "tiktoken>=0.5.1",
    "matplotlib>=3.7.1",
    "networkx>=3.1",
    "pydot>=1.4.2",
    "aiohttp>=3.8.5",
    "whoosh>=2.7.4",
    "watchdog>=3.0.0",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'", # from the_aichemist_codex
    "pywin32>=306; sys_platform == 'win32'",             # from the_aichemist_codex
]

    [project.optional-dependencies]
    # Combined dev dependencies, largely from the_aichemist_codex due to its comprehensiveness
    dev = [
        # --- Core Dev Tools & Testing (from both, reconciled) ---
        "setuptools>=73.0.1",      # from the_aichemist_codex
        "pytest>=8.3.4",           # from the_aichemist_codex (higher version)
        "pytest-asyncio>=0.25.3",  # from the_aichemist_codex
        "pytest-benchmark>=4.0.0", # from the_aichemist_codex
        "pytest-cov>=6.0.0",       # from the_aichemist_codex (higher version)
        "pytest-mock>=3.14.0",     # from the_aichemist_codex
        "codecov>=2.1.13",         # from the_aichemist_codex

        # --- Linting, Formatting & Type Checking (from both, reconciled) ---
        "ruff>=0.11.2",             # from the_aichemist_codex (higher version, more specific)
        "mypy>=1.11.1",             # from the_aichemist_codex (higher version)
        "mypy-extensions>=1.0.0",   # from the_aichemist_codex
        "types-aiofiles>=23.2.0.0", # from the_aichemist_codex
        "types-networkx>=3.1.0.0",  # from the_aichemist_codex
        "types-pywin32>=306.0.0.0", # from the_aichemist_codex

        # --- Dependency Management & Analysis (from the_aichemist_codex) ---
        "deptry>=0.23.0",
        "pydeps>=1.12.17",
        "safety",

        # --- Pre-commit Hooks (from both, reconciled) ---
        "pre-commit>=4.0.0", # Consistent version specified in aichemist-transmutation-codex

        # --- Build & Packaging (from the_aichemist_codex) ---
        "build>=1.2.1",
        "twine>=5.1.0",

        # --- Documentation (from both, primarily the_aichemist_codex's richer set) ---
        "sphinx>=6.2.1",                    # from the_aichemist_codex (higher version)
        "sphinx-rtd-theme",                 # Common, ensure only one variant if specified differently
        "sphinx-autodoc-typehints>=1.22.0", # from the_aichemist_codex
        "sphinx-copybutton>=0.5.2",         # from the_aichemist_codex
        # "sphinx-design", # from aichemist-transmutation-codex, check if compatible/needed with Furo from the_aichemist_codex
        "graphviz>=0.20.1",             # from the_aichemist_codex
        "furo>=2024.8.6",               # from the_aichemist_codex
        "mkdocs-material>=9.5.33",      # from the_aichemist_codex (if using MkDocs path)
        "mkdocs>=1.6.0",                # from the_aichemist_codex (if using MkDocs path)
        "mkdocstrings>=0.25.2",         # from the_aichemist_codex (if using MkDocs path)
        "mkdocstrings-python>=1.10.8",  # from the_aichemist_codex (if using MkDocs path)
        "Pygments>=2.18.0",             # from the_aichemist_codex
        "sphinx-autobuild",             # from the_aichemist_codex
        "sphinxcontrib-mermaid>=0.9.2", # from the_aichemist_codex
        "myst-parser",                  # from the_aichemist_codex

        # --- Notebooks & Interactive (from the_aichemist_codex) ---
        "ipykernel>=6.29.5",
        "ipython>=8.18.1",
        "nbqa>=1.8.7",

        # --- Media Handling (Dev) (from the_aichemist_codex) ---
        "ffmpeg-python>=0.2.0",
        "pymediainfo>=6.0.1",
    ]

    # Scripts from the_aichemist_codex. Ensure the package 'the_aichemist_codex' is available in src.
    [project.scripts]
    codex       = "aichemist_codex.interfaces.cli.cli:cli_app"
    docs-build  = "aichemist_codex.scripts.build_docs:main"
    search-tool = "aichemist_codex.interfaces.cli.commands.search:main"

[tool.setuptools.packages.find]
# Include both packages from the src directory.
# Assumes 'the_aichemist_codex' Python package is in a directory discoverable by this name under 'src/',
# e.g. src/the_aichemist_codex/ or that src/aichemist_codex/ contains the 'the_aichemist_codex' package.
include = [ "aichemist_transmutation_codex*", "aichemist_codex*" ]
where   = [ "src" ]


# Pytest configuration, merged from both, preferring the_aichemist_codex's more detailed setup
[tool.pytest.ini_options]
addopts = "--import-mode=importlib --basetemp=./tmp" # Combined addopts
asyncio_default_fixture_loop_scope = "function" # from the_aichemist_codex
asyncio_mode = "strict" # from the_aichemist_codex
filterwarnings = [ # from the_aichemist_codex
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [ # Combined and de-duplicated markers
    "unit: mark a test as a unit test",
    "file_operations: mark a test relating to file operations",
    "asyncio: mark a test as an asyncio test",
    "metadata: mark a test relating to metadata extraction",
    "tagging: mark a test relating to tagging",
    "search: mark a test relating to search functionality",
    "integration: Integration tests",
    "slow: Tests that take longer to run",
]
python_classes = [ "Test*" ] # from the_aichemist_codex
python_files = [ "test_*.py" ] # from the_aichemist_codex
python_functions = [ "test_*" ] # from the_aichemist_codex
pythonpath = [ "src" ] # Consistent
testpaths = [
    "tests",
    "unittests",
    "integrationtests",
] # More specific from aichemist-transmutation-codex
tmp_path_retention_count = 2 # Consistent
tmp_path_retention_policy = "failed" # Consistent


# Ruff configuration from the_aichemist_codex (more comprehensive)
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "scripts/**/*.py",
] # Ensure this covers all relevant files
indent-width = 4
line-length = 88
target-version = "py313"

    [tool.ruff.lint]
    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
    fixable = [ "ALL" ]
    select = [
        "E",
        "W",
        "F",
        "I",
        "B",
        "C4",
        "UP",
        "N",
        "ANN",
        "S",
        "A",
        "RUF",
    ]
    unfixable = [  ]
    # Consider ignoring specific rules if they conflict with project style, e.g.,
    # ignore = ["ANN101", "ANN102", "E501"] # E501 was ignored in aichemist-transmutation-codex's ruff

        [tool.ruff.lint.per-file-ignores]
        "*/__init__.py" = [ "F401" ]
        "tests/**/*.py" = [
            "S101", # Allow asserts in tests
            "ANN",  # Be less strict with type hints in tests if desired
            "F821", # Allow undefined names (useful for fixtures)
            "F823", # Allow potentially undefined names
            # "F401" # F401 was in aichemist-transmutation-codex's tests ignore
        ]
        # "src/the_aichemist_codex/infrastructure/config/manager.py" = ["ANN401" ] # Example from the_aichemist_codex, keep if path is still relevant
        "docs/**/*.py" = [ "E501" ]

    [tool.ruff.format]
    docstring-code-format      = true
    docstring-code-line-length = "dynamic"
    indent-style               = "space"
    line-ending                = "auto"
    quote-style                = "double"
    skip-magic-trailing-comma  = false


# MyPy configuration from the_aichemist_codex (more comprehensive)
[tool.mypy]
check_untyped_defs       = true
disallow_incomplete_defs = true   # Consistent (true in both)
disallow_untyped_defs    = true   # Consistent (true in both)
ignore_missing_imports   = true   # Consistent (true in both)
pretty                   = true
python_version           = "3.13"
show_error_codes         = true
warn_no_return           = true
warn_redundant_casts     = true
warn_return_any          = true   # Consistent (true in both)
warn_unreachable         = true
warn_unused_ignores      = true
# files = ["src", "tests"] # Consider being explicit
exclude = [ "docs/" ] # Excludes entire docs directory
# warn_unused_configs = true # from aichemist-transmutation-codex, good to have

    [[tool.mypy.overrides]]
    check_untyped_defs       = false     # Consistent
    disallow_incomplete_defs = false     # from the_aichemist_codex for tests
    disallow_untyped_defs    = false     # Consistent
    module                   = "tests.*"

# UV configuration, merged
[tool.uv]
cache-dir = "./.uv_cache" # Consistent
# dev-dependencies should refer to the new project name if you install editable with extras
dev-dependencies = [ "aichemist_transmutation_codex[dev]" ]
extra-index-url  = [ "https://PySimpleGUI.net/install" ]    # from aichemist-transmutation-codex
index-url        = "https://pypi.org/simple/"               # Consistent
link-mode        = "copy"                                   # from aichemist-transmutation-codex
# Consider reviewing no-build-isolation-package for the merged project
no-build-isolation-package = [
    "ruff",
    "mypy",
    "pytest",
    "markdown",
] # from aichemist-transmutation-codex
package = true # from aichemist-transmutation-codex
required-version = ">=0.6.0"

# --- Tools from the_aichemist_codex ---
[tool.pydeps]
cluster = true
exclude = [
    "re",
    "os",
    "sys",
    "collections",
    "typing",
    "json",
    "time",
    "datetime",
    "pathlib",
    "uuid",
    "logging",
    "abc",
    "inspect",
    "functools",
    "itertools",
    "importlib",
    "shutil",
    "tempfile",
    "warnings",
    "weakref",
    "contextlib",
    "subprocess",
    "multiprocessing",
    "threading",
    "argparse",
    "traceback",
    "numpy",
    "pandas",
    "matplotlib",
    "setuptools",
    "aiohttp",
    "asyncio",
    "pydantic",
    "click",
    "rich",
    "sqlalchemy",
    ".venv",
    "site-packages",
    "dist-packages",
    "test",
    "tests",
    "pytest",
    "mock",
    "conftest",
    "docs",
    "build",
    "dist",
    "sphinx",
    "setup",
]
format = "png"
max_bacon = 1
max_module_depth = 4
min_cluster_size = 2
noise_level = 1000
reverse = true

[tool.markdownlint]
MD001   = false
MD013   = false
MD026   = false
MD033   = false
MD036   = false
MD041   = false
default = true

[tool.cspell]
dictionaries = [ "en_US" ]
dictionary-definitions = [  ]
ignore-paths = [
    ".git/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".uv_cache/",
    ".venv/",
    "venv/",
    "__pycache__/",
    "build/",
    "dist/",
    "*.egg-info/",
    "node_modules/",
    "coverage.xml",
]
ignore-words = [  ]
imports = [  ]
version = "0.2"
words = [
    "aichemist",
    "aiohttp",
    "aiosqlite",
    "autodoc",
    "asyncio",
    "codex",
    "cls",
    "cryptography",
    "defusedxml",
    "ezdxf",
    "faiss",
    "graphviz",
    "httpx",
    "ipynb",
    "kwargs",
    "Kreuzberg",
    "loguru",
    "mkdocs",
    "mypy",
    "numpy",
    "pandas",
    "pyproject",
    "pypdf",
    "pypi",
    "pypirc",
    "pydantic",
    "pydeps",
    "pydot",
    "pyenv",
    "pygments",
    "pytest",
    "pytesseract",
    "pyyaml",
    "pywin",
    "pyi",
    "repr",
    "ruff",
    "sqlalchemy",
    "structlog",
    "tabler",
    "toml",
    "todos",
    "uv",
    "venv",
    "yaml",
    # Add words from aichemist-transmutation-codex if any were specific and not covered
    "pymupdf",
    "pdfkit",
    "mammoth",
    "ocrmypdf",
    "pypandoc",
    "ebooklib",
    "markdownify",
    "html2text",
    "docx2pdf",
    "pdf2docx",
    "reportlab",
    "odfpy",
    "openpyxl",
    "pptx",
    "nbconvert",
]

[tool.deptry]
# If 'the_aichemist_codex' becomes an integral part of 'aichemist-unified-codex' (not a separate editable install),
# this ignore rule might need adjustment or removal.
# It's for when a project imports itself if installed editable.
ignore_transitive = [
    "aichemist_transmutation_codex",
    "aichemist_codex",
] # Reflects main project and included package
