[project]
description     = "A versatile document conversion and file management toolkit, part of the AiChemist suite."
license         = { text = "MIT" }
name            = "aichemist_transmutation_codex"
readme          = "README.md"
requires-python = ">=3.13.0"
version         = "0.1.0"


dependencies = [
    "PyPDF2",
    "PyYAML",
    "python-docx",
    "mammoth",
    "pypandoc",
    "markdown",
    "ocrmypdf",
    "PyMuPDF",       # for fitz
    "pdfminer.six",
    "pytesseract",
    "Pillow",        # for PIL
    "opencv-python", # for cv2
    "numpy",
    "docx2pdf",
    "pdfkit",
    "markdown-pdf",
    "pymupdf4llm",   # Added this based on imports
]

    [project.optional-dependencies]

    dev = [
        "ruff",
        "ty",
        "pytest",
    ]

    docs = [
        "sphinx",
        "sphinx-rtd-theme",
        "sphinx-autodoc-typehints",
        "sphinx-click",
        "m2r2",
    ]

    # Scripts from the_aichemist_codex. Ensure the package 'the_aichemist_codex' is available in src.
    [project.scripts]
    codex       = "aichemist_codex.interfaces.cli.cli:cli_app"
    docs-build  = "aichemist_codex.scripts.build_docs:main"
    search-tool = "aichemist_codex.interfaces.cli.commands.search:main"

[tool.setuptools.packages.find]
include = [ "aichemist_transmutation_codex*" ]
where   = [ "src" ]

[build-system]
build-backend = "uv_build"
requires      = [ "uv-build>=0.6.0,<0.7" ]


[tool.pytest.ini_options]
addopts = "--import-mode=importlib --basetemp=./tmp"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: mark a test as a unit test",
    "file_operations: mark a test relating to file operations",
    "asyncio: mark a test as an asyncio test",
    "metadata: mark a test relating to metadata extraction",
    "tagging: mark a test relating to tagging",
    "search: mark a test relating to search functionality",
    "integration: Integration tests",
    "slow: Tests that take longer to run",
]
python_classes = [ "Test*" ]
python_files = [ "test_*.py" ]
python_functions = [ "test_*" ]
pythonpath = [ "src" ]
testpaths = [
    "tests",
    "unittests",
    "integrationtests",
]
tmp_path_retention_count = 2
tmp_path_retention_policy = "failed"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "scripts/**/*.py",
] # Ensure this covers all relevant files
indent-width = 4
line-length = 88
target-version = "py313"

    [tool.ruff.lint]
    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
    fixable = [ "ALL" ]
    select = [
        "E",
        "W",
        "F",
        "I",
        "B",
        "C4",
        "UP",
        "N",
        "ANN",
        "S",
        "A",
        "RUF",
    ]
    unfixable = [  ]


        [tool.ruff.lint.per-file-ignores]
        "*/__init__.py" = [ "F401" ]
        "docs/**/*.py" = [ "E501" ]
        "tests/**/*.py" = [
            "S101", # Allow asserts in tests
            "ANN",  # Be less strict with type hints in tests if desired
            "F821", # Allow undefined names (useful for fixtures)
            "F823", # Allow potentially undefined names
            # "F401" # F401 was in aichemist-transmutation-codex's tests ignore
        ]

    [tool.ruff.format]
    docstring-code-format      = true
    docstring-code-line-length = "dynamic"
    indent-style               = "space"
    line-ending                = "auto"
    quote-style                = "double"
    skip-magic-trailing-comma  = false


[tool.uv]
cache-dir = "./.uv_cache"
dev-dependencies = [ "aichemist_transmutation_codex[dev]" ]
extra-index-url = [ "https://PySimpleGUI.net/install" ]
index-url = "https://pypi.org/simple/"
link-mode = "copy"
no-build-isolation-package = [
    "ruff",
    "mypy",
    "pytest",
    "markdown",
]
package = true
required-version = ">=0.6.0"

[tool.markdownlint]
MD001   = false
MD013   = false
MD026   = false
MD033   = false
MD036   = false
MD041   = false
default = true

[tool.cspell]
dictionaries = [ "en_US" ]
dictionary-definitions = [  ]
ignore-paths = [
    ".git/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".uv_cache/",
    ".venv/",
    "venv/",
    "__pycache__/",
    "build/",
    "dist/",
    "*.egg-info/",
    "node_modules/",
    "coverage.xml",
]
ignore-words = [  ]
imports = [  ]
version = "0.2"
words = [
    "aichemist",
    "aiohttp",
    "aiosqlite",
    "autodoc",
    "asyncio",
    "codex",
    "cls",
    "cryptography",
    "defusedxml",
    "ezdxf",
    "faiss",
    "graphviz",
    "httpx",
    "ipynb",
    "kwargs",
    "Kreuzberg",
    "loguru",
    "mkdocs",
    "mypy",
    "numpy",
    "pandas",
    "pyproject",
    "pypdf",
    "pypi",
    "pypirc",
    "pydantic",
    "pydeps",
    "pydot",
    "pyenv",
    "pygments",
    "pytest",
    "pytesseract",
    "pyyaml",
    "pywin",
    "pyi",
    "repr",
    "ruff",
    "sqlalchemy",
    "structlog",
    "tabler",
    "toml",
    "todos",
    "uv",
    "venv",
    "yaml",
    "pymupdf",
    "pdfkit",
    "mammoth",
    "ocrmypdf",
    "pypandoc",
    "ebooklib",
    "markdownify",
    "html2text",
    "docx2pdf",
    "pdf2docx",
    "reportlab",
    "odfpy",
    "openpyxl",
    "pptx",
    "nbconvert",
]
