[project]
description     = "A versatile document conversion and file management toolkit, part of the AiChemist suite."
license         = { text = "MIT" }
name            = "transmutation_codex"
readme          = "README.md"
requires-python = ">=3.13.0"
version         = "0.1.0"


dependencies = [
    "PyPDF2",
    "PyYAML",
    "python-docx",
    "mammoth",
    "pypandoc",
    "markdown",
    "ocrmypdf",
    "PyMuPDF", # for fitz
    "pdfminer.six",
    "pytesseract",
    "Pillow", # for PIL
    "opencv-python", # for cv2
    "numpy",
    "docx2pdf",
    "pdfkit",
    "markdown-pdf",
    "pymupdf4llm", # Added this based on imports
    "reportlab>=4.4.1",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.3",
    "psutil>=7.1.0",
]

    [project.optional-dependencies]

    dev = [
        "ruff",
        "ty",
        "pytest",
    ]

    docs = [
        "sphinx",
        "sphinx-rtd-theme",
        "sphinx-autodoc-typehints",
        "sphinx-click",
        "m2r2",
    ]

    [project.scripts]
    codex      = "transmutation_codex.interfaces.cli.cli:cli_app"
    docs-build = "transmutation_codex.scripts.build_docs:main"

[tool.setuptools.packages.find]
include = [ "transmutation_codex" ]
where   = [ "src" ]

[build-system]
build-backend = "uv_build"
requires      = [ "uv-build>=0.7.19,<0.8.0" ]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]


[tool.pytest.ini_options]
addopts = "--import-mode=importlib --basetemp=./tmp"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: mark a test as a unit test",
    "file_operations: mark a test relating to file operations",
    "asyncio: mark a test as an asyncio test",
    "metadata: mark a test relating to metadata extraction",
    "tagging: mark a test relating to tagging",
    "search: mark a test relating to search functionality",
    "integration: Integration tests",
    "slow: Tests that take longer to run",
]
python_classes = [ "Test*" ]
python_files = [ "test_*.py" ]
python_functions = [ "test_*" ]
pythonpath = [ "backend" ]
testpaths = [
    "tests",
    "unittests",
    "integrationtests",
]
tmp_path_retention_count = 2
tmp_path_retention_policy = "failed"


[tool.uv]
cache-dir = "./.uv_cache"
extra-index-url = [ "https://PySimpleGUI.net/install" ]
index-url = "https://pypi.org/simple/"
link-mode = "copy"
no-build-isolation-package = [
    "ruff",
    "mypy",
    "pytest",
    "markdown",
]
package = true
required-version = ">=0.7.8"

[tool.markdownlint]
MD001   = false
MD013   = false
MD026   = false
MD033   = false
MD036   = false
MD041   = false
default = true

[tool.cspell]
dictionaries = [ "en_US" ]
dictionary-definitions = [  ]
ignore-paths = [
    ".git/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".uv_cache/",
    ".venv/",
    "venv/",
    "__pycache__/",
    "build/",
    "dist/",
    "*.egg-info/",
    "node_modules/",
    "coverage.xml",
]
ignore-words = [  ]
imports = [  ]
version = "0.2"
words = [
    "aichemist",
    "aiohttp",
    "aiosqlite",
    "autodoc",
    "asyncio",
    "codex",
    "cls",
    "cryptography",
    "defusedxml",
    "ezdxf",
    "faiss",
    "graphviz",
    "httpx",
    "ipynb",
    "kwargs",
    "Kreuzberg",
    "loguru",
    "mkdocs",
    "mypy",
    "numpy",
    "pandas",
    "pyproject",
    "pypdf",
    "pypi",
    "pypirc",
    "pydantic",
    "pydeps",
    "pydot",
    "pyenv",
    "pygments",
    "pytest",
    "pytesseract",
    "pyyaml",
    "pywin",
    "pyi",
    "repr",
    "ruff",
    "sqlalchemy",
    "structlog",
    "tabler",
    "toml",
    "todos",
    "uv",
    "venv",
    "yaml",
    "pymupdf",
    "pdfkit",
    "mammoth",
    "ocrmypdf",
    "pypandoc",
    "ebooklib",
    "markdownify",
    "html2text",
    "docx2pdf",
    "pdf2docx",
    "reportlab",
    "odfpy",
    "openpyxl",
    "pptx",
    "nbconvert",
]
